--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     />
     <meta name="twitter:card" content="summary" />
 
-    <title>Portfolio</title>
+    <title>Renuka Prasad | FULL STACK WEB DEVELOPER</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
